Titre -> chauffage par impact

--- a/Rapport/rapport_had/rapport_h.tex
+++ b/Rapport/rapport_had/rapport_h.tex
@@ -50,7 +50,7 @@ hyperfigures=false]
 
 % En-tête et pied de page % 
 \pagestyle{fancy}
-\fancyhead[L]{\scriptsize \textsc{Titre}} 
+\fancyhead[L]{\scriptsize \textsc{Chauffage par impact d'un planétésimal}} 
 \fancyhead[R]{\scriptsize \textsc{VERGNET Hadrien}} 
 \fancyfoot[C]{ \thepage}
 
@@ -91,7 +91,7 @@ M2 Physique 2016-2017
 \hrulefill
 \begin{center}\bfseries
 \begin{huge}
-Étude du chauffage par impact dans un planétésimal
+Étude du chauffage par impact d'un planétésimal
 \end{huge}
 \Large
 \vspace{0.4cm}
@@ -105,7 +105,7 @@ Projet réalisé par BUNEL Félix et VERGNET Hadrien
 
 \vspace{0.5cm}
 
-\textbf{Résumé :} 
+\textbf{Résumé:} 
 Nous avons réalisé, dans le cadre du module de Géophysique, un modèle numérique d'un planétésimal afin d'étudier l'importance du chauffage par impact sur sa température, en nous basant sur l'article \textit{Thermal evolution and differentiation of planetesimals and planetary embryos. (2012), Icarus, 217(1), 339-354.} par Šrámek, O., Milelli, L., Ricard, Y., et Labrosse, S. .  Notre étude nous a permis de décomposer les différentes contributions au profil de température dans ce planétésimal afin de mettre en évidence l'influence du chauffage par impact.
 \vspace{0.3cm}
 
