--- a/Rapport/rapport_had/rapport_h.tex
+++ b/Rapport/rapport_had/rapport_h.tex
@@ -344,7 +344,7 @@ On peut voir sur la figure \ref{fig1:sub2} que la conséquence  de la prise en c
 Dans ce second modèle, nous avons conservé les même sources de chaleur que pour le modèle précédent en tenant cette fois compte de la variation du rayon provoquée par l'accrétion. Nous avons supposé que la croissance du rayon suivait la loi suivante :
 
 \begin{equation}
-\dot{R} \simeq R^\beta  \quad \textrm{avec $\beta$ = 0, 1 ou 2}
+\dot{R} \propto R^\beta  \quad \textrm{avec $\beta$ = 0, 1 ou 2}
 \end{equation}
 
 La variation est régulière pour $\beta = 0$ , mais elle est plus explosive pour $\beta = 1$ ou $2$ puisqu'elle accélère avec le temps, on pourra alors distinguer la croissance initiale lente, suivie d'une croissance très rapide vers la fin. 
