--- a/Rapport/rapport_had/rapport_h.tex
+++ b/Rapport/rapport_had/rapport_h.tex
@@ -376,11 +376,11 @@ Nous avons considéré deux hypothèses sur la températures des impactants, la 
 
 On peut constater sur la figure \ref{fig3} que le chauffage par impact avec une température des impactants fixée à \SI{1000}{K} est responsable d'une augmentation de la température quasiment uniforme sur l'ensemble de l'épaisseur du planétésimal d'environ 100 à 200K. 
 
-Quand on considère l'évolution de la température des planétésimaux impactants on trouve un chauffage moindre. Pour $beta = 0$ le chauffage est de quelques dizaines de kelvins au centre et il croit jusqu'à \SI{200}{K} proche de la surface. Pour $beta = 1$ et 2 le chauffage est plus uniforme sur l'épaisseur du planétésimal et vaut environ \SI{100}{K} pour $beta = 1$ et \SI{50}{K} pour $beta = 2$.
+Quand on considère l'évolution de la température des planétésimaux impactants on trouve un chauffage moindre. Pour $\beta = 0$ le chauffage est de quelques dizaines de kelvins au centre et il croit jusqu'à \SI{200}{K} proche de la surface. Pour $\beta = 1$ et 2 le chauffage est plus uniforme sur l'épaisseur du planétésimal et vaut environ \SI{100}{K} pour $\beta = 1$ et \SI{50}{K} pour $\beta = 2$.
 
-On constate ainsi que la contribution du chauffage par impact au profil de température du planétésimal est faible en comparaison à l'influence du chauffage radioactif et de la croissance causée par ces mêmes impacts dans les cas $\beta=0$ et 1. Mais que pour $\beta = 2$ l’augmentation de \SI{200}{K} grâce aux impactants à \SI{1000}{K} est très significative puisqu'on a observé, dans le modèle précédant, que la majorité de l'épaisseur était thermalisé avec la nébuleuse à \SI{300}{K} ou autrement dit totalement froide.
+On constate ainsi que la contribution du chauffage par impact au profil de température du planétésimal est faible en comparaison à l'influence du chauffage radioactif et de la croissance causée par ces mêmes impacts dans les cas $\beta=0$ et 1. Mais que pour $\beta = 2$ l’augmentation de \SI{200}{K} grâce aux impactants à \SI{1000}{K} est très significative puisqu'on a observé, dans le modèle précédent, que la majorité de l'épaisseur était thermalisée avec la nébuleuse à \SI{300}{K} ou autrement dit totalement froide.
 
-On constate finalement que l'augmentation de température due au chauffage par impact n'est pas ici suffisante pour permettre un noyau fondu la où les autres sources de chaleur ne le permettaient pas déjà.
+On constate finalement que l'augmentation de température due au chauffage par impact n'est pas ici suffisante pour permettre un noyau fondu là où les autres sources de chaleur ne le permettaient pas déjà.
 
 
 \section*{Conclusion}
